tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_e_closes_focused_tree.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 1,
    top_line: 0,
    active_file: None,
    tree_visible: false,
    tree_focused: false,
    tree_cursor: 0,
    mode: Normal,
    status_message: "",
    full_context: false,
    visual_anchor: 0,
}
