tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_enter_on_file_in_tree.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 31,
    top_line: 30,
    active_file: None,
    tree_visible: true,
    tree_focused: true,
    tree_cursor: 1,
    mode: Normal,
    status_message: "",
    full_context: false,
    visual_anchor: 0,
}
